# Estudos

Arduino/MULTIMETRO/: MULTIMETRO.ino
Arduino/SHIFTWTF/: SHIFTWTF.ino
Arduino/encoder/: Encoder.cpp  Encoder.h
Arduino/i2c-HOST/: i2c-HOST.ino
Arduino/i2c-SLAVE/: i2c-SLAVE.ino
Arduino/millena01/: millena01.ino
C Programming/: C Programming Tutorial for Beginners.txt
C Programming/Giraffe/: Giraffe.depend  main.c
C e C++/ChunkNet/: ChunkNetLib.cpp  ChunkNetLib.h  Makefile  main.cpp
C e C++/Lambda Function/: Makefile
C e C++/LinkedList/: CMakeLists.txt  DataStructuresLib.cpp  main.cpp
C e C++/MultiThreading/: CMakeLists.txt
C e C++/OpenFile/: CMakeLists.txt  arquivo.txt  main.cpp
C e C++/OpenFile - Binary/: main.cpp
C e C++/OpenGL_Teste4/: CMakeLists.txt
C e C++/OpenGL_Teste4/include/Render/: OGLHandler.hpp  ShaderClass.h  VAO.h
C e C++/OpenGL_Teste4/src/Render/: OGLHandler.cpp  VAO.cpp  VBO.cpp
C e C++/ProvaMurilo-ex1/: main.c
C e C++/ProvaMurilo-ex2/: main.c
C e C++/ProvaMurilo-ex3/: main.c
C#/: C# Tutorial - Full Course for Beginners.txt
Data Structures C e C++/: Data Structures - Full Course Using C and C++.txt  LinkedList(SEM AJUDA).c  LinkedList.c
Java/: Intro to Java Programming - Course for Absolute Beginners.txt
OpenGL (C++)/: OpenGL Course - Create 3D and 2D Graphics With C++.txt
Python/: apagando_zeros - Copia.py  csv.txt  diogo3.py  diogo4.py  diogo5.py  diogo6.py  diogo7.py  diogocharprint.py  diogocsv.txt  diogopretao2.py  diogostring.py  diogostring3.py  diogostring4.py  serverAPI_client.py
R/: teste.r
(+227 files in other folders)
